fix the style by hidding the x overflow.

--- a/BasicJavaScript/style.css
+++ b/BasicJavaScript/style.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .success{
     color: green;
     font-size: large;
